Fix back button wrong font color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,9 +108,6 @@ pre > code {
     background-color:rgba(0, 0, 0, 0.5);
     padding: 10px 15px 10px 15px;
     border-radius: 5px;
-}
-
-.back > a {
     color: #ffffff;
 }
 
